--- a/css/style.css
+++ b/css/style.css
@@ -4,32 +4,39 @@ body {
   font-family: "Lato", sans-serif;
 }
 h1 {
-  font-size: 60px;
+  font-size: 3.5rem;
   font-weight: 700;
 }
 h2 {
-  font-size: 40px;
+  font-size: 2rem;
   font-weight: 700;
 }
 h3 {
-  font-size: 40px;
+  font-size: 1.5rem;
   font-weight: 500;
 }
+p {
+  font-size: 1rem;
+}
 
-.bold{
-  font-size: 26px;
+.bold {
+  font-size: 1.5rem;
   font-weight: 400;
 }
-.top-nav{
+.top-nav .navbar {
   border-bottom: 1px solid black;
 }
 .navbar {
-  
   height: 130px;
 }
+.navbar div {
+  display: flex;
+  align-items: center;
+}
+
 .navbar h1 {
   color: #232323;
-  font-size: 40px;
+  font-size: 2.6rem;
   font-weight: 900;
   width: 200px;
 }
@@ -120,24 +127,79 @@ h3 {
   width: 80%;
 }
 .download-links div:hover {
-  background-color:black;
-  color:white;
-}
-.download-links div a{
-  text-decoration: none;
-  color: black;
-  
-}
-.download-links div:hover a{
+  background-color: black;
   color: white;
 }
-.footer{
+.download-links div a {
+  text-decoration: none;
+  color: black;
+}
+.download-links div:hover a {
+  color: white;
+}
+.footer {
   border-top: 1px solid black;
 }
 
-.footer ul{
+.footer ul {
   display: flex;
 }
+.navbar .toggel-icon {
+  display: none;
+}
 
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  h2 {
+    font-size: 1.6rem;
+  }
 
+  .top-nav .navbar-links {
+    display: none;
+  }
+  .navbar .toggel-icon {
+    display: inline-block;
+    z-index: 2;
+  }
+  .toggel-icon i {
+    font-size: 2.5rem;
+    cursor: pointer;
+  }
+  .navbar-links {
+    position: absolute;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(80px);
+    transition:1s;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    z-index: 1;
 
+  }
+  .navbar-links ul {
+    flex-direction: column;
+    margin-top: 200px;
+    margin-bottom: 50px;
+  }
+  .navbar-links ul li {
+    margin: 20px auto;
+  }
+  .navbar-links li a {
+    font-size: 1.5rem;
+  }
+  .navbar ul a:hover {
+    background-size: 0%;
+    font-weight: 400;
+  }
+  .navbar-links a {
+    font-size: 2rem;
+  }
+  .top-nav .navbar ul li {
+    width: 100%;
+  }
+  
+}
