--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,9 @@ p {
     flex-direction: column;
     top: 0;
     left: 0;
-    backdrop-filter: blur(80px);
+    
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px) ;
     transition:1s;
     width: 100%;
     height: 100vh;
