--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,7 @@ p {
   display: flex;
   align-items: center;
 }
-
-.navbar h1 {
+.navbar-logo{
   color: #232323;
   font-size: 2.6rem;
   font-weight: 900;
@@ -170,7 +169,9 @@ p {
   h2 {
     font-size: 1.6rem;
   }
-
+  .navbar-logo{
+    font-size: 2.4rem;
+  }
   .top-nav #navbar-links {
     display: none;
   }
@@ -180,7 +181,7 @@ p {
     cursor: pointer;
   }
   .toggel-icon i {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     cursor: pointer;
   }
   .navbar-links {
@@ -224,11 +225,22 @@ p {
     display: flex;
     text-decoration: auto;
   }
+  .footer div {
+   
+    justify-content: center;
+}
 }
 
 @media screen and (max-width: 500px) {
   h1 {
     font-size: 1.8rem;
+  }
+  .toggel-icon i {
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .navbar-logo{
+    font-size: 2.2rem;
   }
   label {
     font-size: 0.6rem;
@@ -257,4 +269,9 @@ p {
   .navbar {
     height: 100px;
   }
+  .navbar ul li a{
+    font-size: 1rem;
+   
+  }
+
 }
